--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -33,16 +33,15 @@
           font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
           'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
           sans-serif;
-          font-size: 16px;
           color: var(--col-text);
           background: var(--col-bg);
       }
       .font-label { font-family: Helvetica Neue, Helvetica, Arial, sans-serif; }
-      .font-mono { font-family:monospace; }
-      h1 { font-size: 30px; }
-      h2 { font-size: 23px; }
-      h3 { font-size: 18px; }
-      p { max-width: 550px; }
+      .font-mono { font-family:monospace; font-size: 1.02rem }
+      h1 { font-size: 1.5rem; }
+      h2 { font-size: 1.3rem; }
+      h3 { font-size: 1.2rem; }
+      p { max-width: 33rem; }
       .content {
           width: 100%;
           height: 100vh;
