i18n for login page

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -52,6 +52,7 @@
   %sveltekit.head%
 </head>
 <body>
+<template id="i18n">{{ i18n }}</template>
 <input name="rauthy-csrf-token" id="{{ csrf_token }}" type="hidden"/>
 <input name="rauthy-data" id="{{ data }}" type="hidden"/>
 <input name="rauthy-action" id="{{ action }}" type="hidden"/>
