pre-compute CSP's at build time and get rid of nonce-headers per request

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <style nonce="{{ nonce }}">
+  <style>
       * { box-sizing: border-box; }
       :root {
           --col-act1: #6b3d99;
