--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,65 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="robots" content="noindex, nofollow">
-  <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <style>
-      * { box-sizing: border-box; }
-      :root {
-          --col-act1: #6b3d99;
-          --col-act1a: #714d99;
-          --col-act2: #388c51;
-          --col-act2a: #4d8c62;
-          --col-acnt: #3d5d99;
-          --col-acnta: #36486b;
-          --col-ok: #43993d;
-          --col-err: #993d49;
-          --col-glow: #545454;
-          --col-gmid: #b2b2b2;
-          --col-ghigh: #f2f2f2;
-          --col-text: #383838;
-          --col-bg: #f7f7f7;
+    <meta charset="utf-8"/>
+    <meta name="robots" content="noindex, nofollow">
+    <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-          --width-events: 12.5rem;
-          --width-events-collapsed: 2.5rem;
-          --width-events-wide: 30rem;
-      }
-      body {
-          width: 100vw;
-          height: 100vh;
-          margin: 0;
-          padding: 0;
-          display: flex;
-          flex: 1;
-          justify-content: center;
-          align-items: center;
-          font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
-          'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-          sans-serif;
-          color: var(--col-text);
-          background: var(--col-bg);
-      }
-      .font-label { font-family: Helvetica Neue, Helvetica, Arial, sans-serif; }
-      .font-mono { font-family:monospace; font-size: 1.02rem }
-      a, a:visited { color: var(--col-act2) }
-      a:hover { color: var(--col-act2a) }
-      h1 { font-size: 1.5rem; }
-      h2 { font-size: 1.3rem; }
-      h3 { font-size: 1.2rem; }
-      p { max-width: 33rem; }
-      .content {
-          width: 100%;
-          height: 100vh;
-          padding: 20px 10px;
-      }
-      .noselect { user-select: none; }
-  </style>
-  %sveltekit.head%
+        :root {
+            --col-act1: #6b3d99;
+            --col-act1a: #714d99;
+            --col-act2: #388c51;
+            --col-act2a: #4d8c62;
+            --col-acnt: #3d5d99;
+            --col-acnta: #36486b;
+            --col-ok: #43993d;
+            --col-err: #993d49;
+            --col-glow: #545454;
+            --col-gmid: #b2b2b2;
+            --col-ghigh: #f2f2f2;
+            --col-text: #383838;
+            --col-bg: #f7f7f7;
+
+            --width-events: 12.5rem;
+            --width-events-collapsed: 2.5rem;
+            --width-events-wide: 30rem;
+        }
+
+        body {
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex: 1;
+            justify-content: center;
+            align-items: center;
+            font-family: -apple-system, BlinkMacSystemFont, 'Roboto', 'Segoe UI', 'Oxygen',
+            'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+            sans-serif;
+            color: var(--col-text);
+            background: var(--col-bg);
+        }
+
+        .font-label {
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        }
+
+        .font-mono {
+            font-family: monospace;
+            font-size: 1.02rem
+        }
+
+        a, a:visited {
+            color: var(--col-act2)
+        }
+
+        a:hover {
+            color: var(--col-act2a)
+        }
+
+        h1 {
+            font-size: 1.5rem;
+        }
+
+        h2 {
+            font-size: 1.3rem;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+        }
+
+        p {
+            max-width: 33rem;
+        }
+
+        .content {
+            width: 100%;
+            height: 100vh;
+            padding: 20px 10px;
+        }
+
+        .noselect {
+            user-select: none;
+        }
+    </style>
+    %sveltekit.head%
 </head>
 <body>
-<template id="i18n">{{ i18n }}</template>
+<template id="i18n">{{ i18n|safe }}</template>
+<template id="auth_providers">{{ auth_providers|safe }}</template>
 <input name="rauthy-csrf-token" id="{{ csrf_token }}" type="hidden"/>
 <input name="rauthy-data" id="{{ data }}" type="hidden"/>
 <input name="rauthy-action" id="{{ action }}" type="hidden"/>
