include theme fetch in `app.html` and create first template for TS API types

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="%lang%">
 <head>
     <meta charset="utf-8"/>
     <meta name="robots" content="noindex, nofollow">
-    <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
+
+    <!-- <link rel="preload" href="/auth/v1/theme/rauthy" as="style"/>-->
+    <!-- <link rel="stylesheet" href="/auth/v1/theme/rauthy"/>-->
+    <!--
+    We can keep the {{client_id}} during local dev -> backend will always return the default.
+    In production, the value will be replaced with the proper id to load custom client branding.
+    -->
+    <link rel="preload" href="/auth/v1/theme/{{client_id}}" as="style"/>
+    <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}"/>
     <style>
         * {
             box-sizing: border-box;
