i18n preload, LangSelector -> sv5, i18n override during local dev

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -48,6 +48,7 @@
             color: var(--col-act2a)
         }
     </style>
+    <link rel="preload" href="/auth/v1/i18n/{{lang}}" as="fetch"/>
     %sveltekit.head%
 </head>
 <body>
