--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -48,9 +48,14 @@
     %sveltekit.head%
 </head>
 <body>
-<template id="auth_providers">{{ auth_providers|safe }}</template>
-<input name="rauthy-csrf-token" id="{{ csrf_token }}" type="hidden"/>
-<input name="rauthy-data" id="{{ data }}" type="hidden"/>
+<div class="hidden">
+    <template id="auth_providers">{{ auth_providers|safe }}</template>
+    <input name="rauthy-csrf-token" id="{{ csrf_token }}" type="hidden"/>
+    <input name="rauthy-data" id="{{ data }}" type="hidden"/>
+    {% for tpl in templates -%}
+    <template id="{{ tpl.id() }}">{{ tpl.inner()|safe }}</template>
+    {%- endfor %}
+</div>
 <input name="rauthy-action" id="{{ action }}" type="hidden"/>
 <div style="display: contents">%sveltekit.body%</div>
 </body>
