--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>Rauthy</title>
     <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
     <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}"/>
     <style>
