create a whole new `<ClientBranding>` component to match the new theming setup

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Rauthy</title>
     <link rel="icon" href="%sveltekit.assets%/assets/favicon.svg"/>
-    <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}"/>
+    <link rel="stylesheet" href="/auth/v1/theme/{{client_id}}/{{theme_ts}}"/>
     <style>
         :root {
             --col-act1: #6b3d99;
