make use of the new way of logo caching in the UI

--- a/frontend/src/app.html
+++ b/frontend/src/app.html
@@ -10,7 +10,7 @@
     %sveltekit.head%
 </head>
 <body>
-<div class="hidden" aria-hidden="true" style="display: none">
+<div class="hidden" aria-hidden="true">
     {%- for tpl in templates -%}
     <template id="{{ tpl.id() }}">{{ tpl.inner()|safe }}</template>
     {%- endfor %}
